2019xcordef JACM Appendix B Operations on Sequences

--- a/2019xcordef/JACM/formatting.sty
+++ b/2019xcordef/JACM/formatting.sty
@@ -27,6 +27,10 @@
 \newcommand{\citePp}   [2]{\cite[page~#2]{#1}}
 \newcommand{\citePpc}  [2]{\cite[page~#2]{#1}}
 
+\newcommand{\prope}  [1]{\emph{#1}}
+\newcommand{\structe}[1]{\emph{#1}}
+\newcommand{\structd}[1]{\textbf{#1}}
+
 \newcommand{\pref}  [1]{{\prettyref{#1}}}                                       % prefixed reference
 \newcommand{\prefp} [1]{{\prettyref{#1} {\scriptsize page}~\pageref{#1}}}       % prefixed reference with page number
 \newcommand{\prefpp}[1]{{\prettyref{#1} (page~\pageref{#1})}}                   % prefixed reference with (page number)
@@ -41,6 +45,11 @@
 %\newcommand{\xrefp} [1]{{\sffamily\addfontfeatures{Scale=0.71}\prettyref{#1} page~\pageref{#1}}}  % prefixed reference with page number
 %\newcommand{\xrefpo} [1]{{\sffamily\addfontfeatures{Scale=0.71}(page~\pageref{#1})}}  % reference with page number only
 \newcommand{\xref}  [1]{\xrefP{#1}}
+\newcommand{\thm} [1]{#1}
+\newcommand{\thmd}[1]{#1}
+\newcommand{\leme}[1]{\emph{#1}}
+\newcommand{\lem} [1]{#1}
+\newcommand{\lemd}[1]{#1}
 
 
 %\newcommand{\pref}     [1]{\cite{#1}}
