--- a/2019xcordef/JACM/symbols.sty
+++ b/2019xcordef/JACM/symbols.sty
@@ -148,8 +148,6 @@
 \newcommand{\dy}  {\Infinitesimal{y}}
 
 \newcommand{\inprod} [2]{\left\langle{#1}\,|\,{#2}\right\rangle}
-\newcommand{\structe}[1]{\emph{#1}}
-\newcommand{\prope}  [1]{\emph{#1}}
 \newcommand{\thme}   [1]{\emph{#1}}
 \newcommand{\propb}  [1]{\textbf{#1}}
 \newcommand{\propd}  [1]{\textbf{#1}}
@@ -166,6 +164,8 @@
 \newcommand{\convd}{\conv}  % discrete convolution
 \newcommand{\invo}{\ast}   % involution
 \newcommand{\kdelta}[0]{\bar{\delta}}
+\newcommand{\ZX}    [0]{{\ZT{X}}}
+\newcommand{\ZY}    [0]{{\ZT{Y}}}
 
 \newcommand{\deriv} [2]   {{\frac{\mathrm{d}#1}{\mathrm{d}#2} }}
 \newcommand{\pderiv}[2]   {{\frac{{\partial#1}}{{\partial#2}} }}
@@ -212,6 +212,19 @@
  \newcommand{\pdfxy} [0]{\mathfnct{p}_{\rvx\rvy}}
  \newcommand{\pdfxgy}[0]{\mathfnct{p}_{\rvx|\rvy}}
  \newcommand{\pdfygx}[0]{\mathfnct{p}_{\rvy|\rvx}}
+
+\newcommand{\setXYZ}  [1]{{#1}}     % general sets
+
+\newcommand{\setX}{\setXYZ{X}}
+\newcommand{\setXo}{\setX^\orthog}
+\newcommand{\setY}{\setXYZ{Y}}
+ \newcommand{\clF}   [2]{{#2}^{#1}}                      % set of functions
+ \newcommand{\clFxy} [0]{\clF{\setX}{\setY}}             % set of functions f:X-->Y
+ \newcommand{\clFyx} [0]{\clF{\setY}{\setX}}             % set of functions f:Y-->X
+\newcommand{\hxs}[1]{#1}
+\newcommand{\hxsd}[1]{#1}
+\newcommand{\Zx}    [0]{{\ZT{\fx}}}
+\newcommand{\Zy}    [0]{{\ZT{\fy}}}
 
 %---------------------------------------
 % Operators
