--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -43,7 +43,7 @@
 \section{Random Sequences}
   \input{expectation.tex}
   \input{randseq.tex}
-%  \input{dsp.tex}
+  \input{dsp.tex}
 %  \input{normalg.tex}
 \end{appendices}
 %---------------------------------------
