2019xcordef JACM Appendix C Normed Algebras

--- a/2019xcordef/JACM/formatting.sty
+++ b/2019xcordef/JACM/formatting.sty
@@ -9,10 +9,13 @@
 \newcommand{\scy}{\scriptstyle}%
 \newcommand{\indentx}{\ensuremath{\mbox{}\qquad}}%
 \newcommand{\citerpgc}[4]{\cite[page #2]{#1}}
-\newcommand{\citerppgc}[4]{\cite[pages~#2--#3]{#1}}
 \newcommand{\citerpg}[3]{\cite[page #2]{#1}}
 \newcommand{\citerp}[2]{\cite[page #2]{#1}}
 \newcommand{\citerc}[2]{\cite{#1}}
+\newcommand{\citeIpg}  [3]{\cite{#1}, \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}}
+\newcommand{\citerppg} [4]{\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
+\newcommand{\citerppgc}[5]{\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3} <#5>\index[xref]{{\cite{#1}}}} % citation with google book search link to page
+
 %\newcommand{\xref}[1]{\ref{#1}}
 \newcommand{\defbox}[1]{\mbox{}\\$\displaystyle#1$\\}
 \newcommand{\lembox}[1]{\mbox{}\\$\displaystyle#1$\\}
@@ -26,6 +29,7 @@
 \newcommand{\citeP}    [1]{\cite{#1}}
 \newcommand{\citePp}   [2]{\cite[page~#2]{#1}}
 \newcommand{\citePpc}  [2]{\cite[page~#2]{#1}}
+\newcommand{\indxs}[1]{\index[xsym]{\ensuremath{#1}}}
 
 \newcommand{\prope}  [1]{\emph{#1}}
 \newcommand{\structe}[1]{\emph{#1}}
@@ -84,6 +88,7 @@
 \newcolumntype{D}{>{$\scriptsize}l<{$}}
 \newcolumntype{F}{>{$\scriptsize}r<{$}}
 \newcolumntype{M}{>{$}l<{$}}
+\newcolumntype{L}{>{\displaystyle}l}
 
 \newenvironment{liste}[1][\imark]
   {\begin{list}{#1}{
@@ -151,3 +156,5 @@
    \newrefformat{theme}{Theme~\ref{#1}}
    \newrefformat{cnt}  {Counterexample~\ref{#1}}
    \newrefformat{rem}  {Remark~\ref{#1}}
+
+\newcommand{\citetbl}[1]{\footnote{#1}}
