--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -44,7 +44,7 @@
   \input{expectation.tex}
   \input{randseq.tex}
   \input{dsp.tex}
-%  \input{normalg.tex}
+  \input{normalg.tex}
 \end{appendices}
 %---------------------------------------
 % Backmatter
