--- a/2019xcordef/JACM/symbols.sty
+++ b/2019xcordef/JACM/symbols.sty
@@ -27,11 +27,15 @@
 \newcommand{\seqY}{\mathbb{y}}
 \newcommand{\seqZ}{\mathbb{z}}
 
+\newcommand{\opair}[2]{\left( #1,#2\right)} % ordered pair
 \newcommand{\otriple}[3]{\left( #1,#2,#3\right)}                   % ordered triple
 \newcommand{\ofive}  [5]{\left( #1,#2,#3,#4,#5 \right)}             % ordered 5-tuple
 \newcommand{\osix}   [6]{\left( #1,#2,#3,#4,#5,#6 \right)}          % ordered 6-tuple
 \newcommand{\oeight} [8]{\left( #1,#2,#3,#4,#5,#6,#7,#8 \right)}    % ordered 8-tuple
 \newcommand{\onine}  [9]{\left( #1,#2,#3,#4,#5,#6,#7,#8,#9 \right)} % ordered 9-tuple
+
+\newcommand{\norm}[1]{\left\lVert #1 \right\rVert}
+\newcommand{\normn}[0]{\norm{\cdot}}
 
 \newcommand{\RandomVariable}[1]{#1}
 \newcommand{\rve}{\RandomVariable{p}}
@@ -225,6 +229,7 @@
 \newcommand{\hxsd}[1]{#1}
 \newcommand{\Zx}    [0]{{\ZT{\fx}}}
 \newcommand{\Zy}    [0]{{\ZT{\fy}}}
+\newcommand{\algA}{\mathbb{A}}
 
 %---------------------------------------
 % Operators
