2019xcordef references.bib bibtex database

--- a/2019xcordef/JACM/bibliography.tex
+++ b/2019xcordef/JACM/bibliography.tex
@@ -47,13 +47,13 @@
          \url{http://books.google.com/books?vid=ISBN0023535717},
          (1991).
 
-\bibitem{kay1988}     
-         Steven M. Kay,
-         \emph{Modern Spectral Estimation: Theory and Application},
-         Prentice-Hall signal processing series,
-         ISBN 9788131733561, Prentice Hall, 543 pages,
-         \url{http://books.google.com/books?vid=ISBN8131733564},
-         (1988).
+\bibitem[27]{kay1988}     
+         \newblock Steven M. Kay,
+         \newblock \emph{Modern Spectral Estimation: Theory and Application},
+         \newblock Prentice-Hall signal processing series,
+         \newblock ISBN 9788131733561, Prentice Hall, 543 pages,
+         \newblock \url{http://books.google.com/books?vid=ISBN8131733564},
+         \newblock (1988).
 
 \bibitem{leuridan1986}
         {J. Leuridan and J. De Vis and D., Van der Auweraer H. F. Lembregts},
