--- a/2019xcordef/JACM/formatting.sty
+++ b/2019xcordef/JACM/formatting.sty
@@ -158,3 +158,7 @@
    \newrefformat{rem}  {Remark~\ref{#1}}
 
 \newcommand{\citetbl}[1]{\footnote{#1}}
+
+\bibliographystyle{plainnat}% natbib package Harvard plain style
+\setcitestyle{authoryear}%\setcitestyle{numbers}%\setcitestyle{super}
+
