2019xcordef JACM clean-up

--- a/2019xcordef/JACM/dsp.tex
+++ b/2019xcordef/JACM/dsp.tex
@@ -17,11 +17,11 @@
 %--------------------------------------
 \begin{definition}
 \label{def:sequence}
-\footnote{
+%\footnote{
   \citerp{bromwich1908}{1},
   \citerpgc{thomson2008}{23}{143484367X}{Definition 2.1},
   \citerpg{joshi1997}{31}{8122408265}
-  }
+%  }
 \label{def:tuple}
 \label{def:seq}
 %--------------------------------------
@@ -37,9 +37,9 @@ Let $\Z$ be the set of integers.
 
 %--------------------------------------
 \begin{definition}
-\footnote{
+%\footnote{
   \citerpgc{kubrusly2011}{347}{0817649972}{Example 5.K}
-  }
+%  }
 \label{def:spllR}
 \label{def:spllC}
 \label{def:spllF}
