--- a/2019xcordef/JACM/expectation.tex
+++ b/2019xcordef/JACM/expectation.tex
@@ -8,11 +8,11 @@
 %======================================
 %---------------------------------------
 \begin{definition}
-\footnote{
+%\footnote{
   \citerpgc{papoulis1984}{104}{0070484686}{``5-3 {\scshape Mean and variance}"},
   \citerpgc{bendat1980}{30}{0471058874}{``2.2.1 Expected Values and Moments"\ldots(2.11)},
   \citerpgc{bendat2010}{49}{1118210824}{``3.1.2 Expected Values"\ldots(3.8)}
-  }
+%  }
 \label{def:pE}
 %---------------------------------------
 Let $\ps$ be a \structe{probability space} and
@@ -26,10 +26,10 @@ $\rvX$ a \fncte{random variable} on $\ps$ with
 
 %---------------------------------------
 \begin{proposition}[\thme{Linearity of $\pE$}]
-\footnote{
+%\footnote{
   \citerpgc{papoulis1984}{107}{0070484686}{``{\itshape Linearity}\ldots(5-31)"},
   \citerpgc{bendat1980}{30}{0471058874}{``2.2.1 Expected Values and Moments"\ldots(2.12)},
-  }
+%  }
 \label{prop:pE_linop}
 %---------------------------------------
 Let $\rvX$ be a \fncte{random variable} on a \structe{probability space} $\ps$.
