--- a/2019xcordef/JACM/formatting.sty
+++ b/2019xcordef/JACM/formatting.sty
@@ -8,15 +8,14 @@
 \newcommand{\scs}{\scriptsize}%
 \newcommand{\scy}{\scriptstyle}%
 \newcommand{\indentx}{\ensuremath{\mbox{}\qquad}}%
-\newcommand{\citerpgc}[4]{\cite[page #2]{#1}}
-\newcommand{\citerpg}[3]{\cite[page #2]{#1}}
-\newcommand{\citerp}[2]{\cite[page #2]{#1}}
-\newcommand{\citerc}[2]{\cite{#1}}
-\newcommand{\citeIpg}  [3]{\cite{#1}, \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}}
-\newcommand{\citerppg} [4]{\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
-\newcommand{\citerppgc}[5]{\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3} <#5>\index[xref]{{\cite{#1}}}} % citation with google book search link to page
+\newcommand{\citerpgc}[4]{\citep[page #2]{#1}}
+\newcommand{\citerpg}[3]{\citep[page #2]{#1}}
+\newcommand{\citerp}[2]{\citep[page #2]{#1}}
+\newcommand{\citerc}[2]{\citep{#1}}
+\newcommand{\citeIpg}  [3]{\citep[\href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}     ]{#1}}
+\newcommand{\citerppg} [4]{\citep[\href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}]{#1}}
+\newcommand{\citerppgc}[5]{\citep[\href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}]{#1}}
 
-%\newcommand{\xref}[1]{\ref{#1}}
 \newcommand{\defbox}[1]{\mbox{}\\$\displaystyle#1$\\}
 \newcommand{\lembox}[1]{\mbox{}\\$\displaystyle#1$\\}
 \newcommand{\propbox}[1]{\mbox{}\\$\displaystyle#1$\\}
@@ -157,8 +156,8 @@
    \newrefformat{cnt}  {Counterexample~\ref{#1}}
    \newrefformat{rem}  {Remark~\ref{#1}}
 
-\newcommand{\citetbl}[1]{\footnote{#1}}
+\newcommand{\citetbl}[1]{{#1}}
 
 \bibliographystyle{plainnat}% natbib package Harvard plain style
-\setcitestyle{square, numbers, citesep={,}}
+%\setcitestyle{numbers, square, comma }
 
