--- a/2019xcordef/JACM/intro.tex
+++ b/2019xcordef/JACM/intro.tex
@@ -6,7 +6,7 @@
 \section{Introduction}
 %=======================================
 The literature offers varying and in general incompatible definitions of the
-\fncte{cross-correlation} function $\Rxy(n,m)$ and its \ope{jointly wide-sense stationary} \ref{def:jwss} 
+\fncte{cross-correlation} function $\Rxy(n,m)$ and its \ope{jointly wide-sense stationary} \xref{def:jwss} 
 special case $\Rxy(m)$.
 The choice of definition has consequences for results involving the \fncte{cross-spectral density} function
 $\Swxy(\omega)$, 
@@ -15,6 +15,7 @@ as well as the more general $\Szxy(z)$,
 which is defined as the \ope{Z-Transform} of $\Rxy(m)$:
 %---------------------------------------
 \begin{definition}
+%\citep{papoulis1984, kay1988, bendat1980, bendat2010}
 %\footnote{
   \citerpgc{papoulis1984}{265}{0070484686}{``Power Spectrum"},
   \citerpgc{kay1988}{52}{8131733564}{``$P_{xx}(f)$\ldots(1.1)"},
@@ -36,5 +37,4 @@ which is defined as the \ope{Z-Transform} of $\Rxy(m)$:
   }
 \end{definition}
 
-
-\ref{def:jwss} 
+%\ref{def:jwss} 
