--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -19,6 +19,8 @@
   \small dgreenhoe@gmail.com %E-mail(s):
 }
 
+\geometry{showframe=false,showcrop=false}
+
 %---------------------------------------
 % Main Body
 %---------------------------------------
@@ -54,7 +56,10 @@
 % To Generate main.bbl from command line enter:
 %   bibtex main
 %---------------------------------------
-\bibliography{ references }
+%\setcitestyle{numbers}
+
+
 \input{main.bbl}
 
+\bibliography{references}
 \end{document}
