--- a/2019xcordef/JACM/normalg.tex
+++ b/2019xcordef/JACM/normalg.tex
@@ -10,61 +10,16 @@
 %\section{Algebras}
 %=======================================
 
-%All \structe{linear space}s\ifsxref{vector}{def:vspace} are equipped with an operation by which vectors in the spaces can be added together.
-%Linear spaces also have an operation that allows a scalar and a vector to be ``multiplied" together.
-%But linear spaces in general have no operation that allows two vectors to be multiplied together.
-%A linear space together with such an operator is an \structd{algebra}.\footnote{\citerpg{fuchs1995}{2}{052148412X}}
-%
-%There are many many possible algebras---many more than one can shake a stick at,
-%as indicated by Michiel Hazewinkel in his book, \hie{Handbook of Algebras}:
-%``Algebra, as we know it today (2005), 
-%consists of many different ideas, concepts and results. 
-%A reasonable estimate of the number of these different items 
-%would be somewhere between 50,000 and 200,000. 
-%Many of these have been named and many more could (and perhaps should) 
-%have a ``name" or other convenient designation."\footnote{\citerpg{hazewinkel2000}{v}{044450396X}}
-
-%20190429%%---------------------------------------
-%20190429%\begin{definition}
-%20190429%\footnote{
-%20190429%  \citerpg{folland1995}{1}{0849384907}
-%20190429%  }
-%20190429%\label{def:unital_algebra}
-%20190429%\label{def:ualg}
-%20190429%%---------------------------------------
-%20190429%Let $\algA$ be an \structe{algebra}.
-%20190429%\defbox{
-%20190429%  \text{An algebra $\algA$ is \hid{unital} if
-%20190429%  $\quad\exists u\in\algA \st ux = xu = x \qquad\forall x\in\algA$}
-%20190429%  }
-%20190429%\end{definition}
-%20190429%
-%20190429%%---------------------------------------
-%20190429%\begin{definition}
-%20190429%\footnote{
-%20190429%  \citerppg{folland1995}{3}{4}{0849384907}
-%20190429%  }
-%20190429%\indxs{\oppSpec}\indxs{\oppRes}\indxs{\oppRad}
-%20190429%%---------------------------------------
-%20190429%Let $\algA$ be an \structe{unital algebra} \xref{def:ualg} with unit $e$.
-%20190429%\defbox{\begin{array}{M>{\ds}rc>{\ds}lC}
-%20190429%  The \structd{spectrum} of $x\in\algA$ is        & \oppSpec(x)        &\eqd& \set{\lambda\in\C}{\lambda e - x \text{ is not invertible}}.\\
-%20190429%  The \structd{resolvent} of $x\in\algA$ is       & \oppRes_x(\lambda) &\eqd& (\lambda e - x)^{-1}   & \forall\lambda\notin\oppSpec(x).\\
-%20190429%  The \structd{spectral radius} of $x\in\algA$ is & \oppRad(x)         &\eqd& \sup\set{\abs{\lambda}}{\lambda\in\oppSpec(x)}.
-%20190429%\end{array}}
-%20190429%\end{definition}
-
-
 %=======================================
 %\section{Star-Algebras}
 %=======================================
 %---------------------------------------
 \begin{definition}
-\footnote{
+%\footnote{
   %\citerpg{folland1995}{1}{0849384907},
   \citerp{rickart1960}{178},
   \citeIpg{gelfand1964}{241}{0821820222}
-  }
+%  }
 \label{def:star_algebra}
 \label{def:staralg}
 \index{star-algebra}
@@ -82,182 +37,17 @@ Let $\algA$ be an \structe{algebra}.
 \end{array}}
 \end{definition}
 
-
-%20190429%%---------------------------------------
-%20190429%\begin{proposition}
-%20190429%\footnote{
-%20190429%  \citerpg{folland1995}{5}{0849384907}
-%20190429%  }
-%20190429%\label{prop:nalg_x*-1}
-%20190429%%---------------------------------------
-%20190429%Let $\opair{\algA}{\invo}$ be an \structe{unital $\invo$-algebra}.
-%20190429%\propbox{
-%20190429%  \text{$x$ is invertible}
-%20190429%  \qquad\implies\qquad
-%20190429%  \brbl{\begin{array}{FLCD}
-%20190429%    1. & \text{$x^\invo$ is \prope{invertible}}     & \forall x\in\algA  & and \\
-%20190429%    2. & \brp{x^\invo}^{-1} = \brp{x^{-1}}^\invo    & \forall x\in\algA
-%20190429%  \end{array}}
-%20190429%  }
-%20190429%\end{proposition}
-%20190429%\begin{proof}
-%20190429%Let $e$ be the unit element of $\opair{\algA}{\invo}$.
-%20190429%\begin{enumerate}
-%20190429%  \item Proof that $e^\invo = e$:\label{item:nalg_x*-1_e}
-%20190429%    \begin{align*}
-%20190429%      x\,e^\invo 
-%20190429%        &= \brp{x\,e^\invo}^{\invo\invo}
-%20190429%        && \text{by \prope{involutory} property of $\invo$}
-%20190429%        && \text{\xref{def:staralg}}
-%20190429%      \\&= \brp{x^\invo\,e^{\invo\invo}}^{\invo}
-%20190429%        && \text{by \prope{antiautomorphic} property of $\invo$}
-%20190429%        && \text{\xref{def:staralg}}
-%20190429%      \\&= \brp{x^\invo\,e}^{\invo}
-%20190429%        && \text{by \prope{involutory} property of $\invo$}
-%20190429%        && \text{\xref{def:staralg}}
-%20190429%      \\&= \brp{x^\invo}^{\invo}
-%20190429%        && \text{by definition of $e$}
-%20190429%      \\&= x
-%20190429%        && \text{by \prope{involutory} property of $\invo$}
-%20190429%        && \text{\xref{def:staralg}}
-%20190429%      \\
-%20190429%      e^\invo\,x 
-%20190429%        &= \brp{e^\invo\,x}^{\invo\invo}
-%20190429%        && \text{by \prope{involutory} property of $\invo$}
-%20190429%        && \text{\xref{def:staralg}}
-%20190429%      \\&= \brp{e^{\invo\invo}\,x^\invo}^{\invo}
-%20190429%        && \text{by \prope{antiautomorphic} property of $\invo$}
-%20190429%        && \text{\xref{def:staralg}}
-%20190429%      \\&= \brp{e\,x^\invo}^{\invo}
-%20190429%        && \text{by \prope{involutory} property of $\invo$}
-%20190429%        && \text{\xref{def:staralg}}
-%20190429%      \\&= \brp{x^\invo}^{\invo}
-%20190429%        && \text{by definition of $e$}
-%20190429%      \\&= x
-%20190429%        && \text{by \prope{involutory} property of $\invo$}
-%20190429%        && \text{\xref{def:staralg}}
-%20190429%    \end{align*}
-%20190429%
-%20190429%  \item Proof that $\brp{x^\invo}^{-1} = \brp{x^{-1}}^\invo$:
-%20190429%    \begin{align*}
-%20190429%      \brp{x^{-1}}^\invo\,\brp{x^\invo}
-%20190429%        &= \brs{x\,\brp{x^{-1}}}^\invo
-%20190429%        && \text{by \prope{antiautomorphic} and \prope{involution} properties of $\invo$}
-%20190429%        && \text{\xref{def:staralg}}
-%20190429%      \\&= e^\invo
-%20190429%      \\&= e
-%20190429%        && \text{by \prefp{item:nalg_x*-1_e}}
-%20190429%      \\
-%20190429%      \brp{x^\invo}\,\brp{x^{-1}}^\invo
-%20190429%        &= \brs{x^{-1}\,x}^\invo
-%20190429%        && \text{by \prope{antiautomorphic} and \prope{involution} properties of $\invo$}
-%20190429%        && \text{\xref{def:staralg}}
-%20190429%      \\&= e^\invo
-%20190429%      \\&= e
-%20190429%        && \text{by \prefp{item:nalg_x*-1_e}}
-%20190429%    \end{align*}
-%20190429%\end{enumerate}
-%20190429%\end{proof}
-
-
-%20190429%%---------------------------------------
-%20190429%\begin{definition}
-%20190429%\label{def:op_adjoint}
-%20190429%\label{def:*_selfadj}
-%20190429%\footnote{
-%20190429%  \citerp{rickart1960}{178},
-%20190429%  \citeIpg{gelfand1964}{242}{0821820222}
-%20190429%  }
-%20190429%%---------------------------------------
-%20190429%Let $\opair{\algA}{\normn}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
-%20190429%\defboxp{
-%20190429%  \begin{liste}
-%20190429%    \item An element $x\in\algA$ is \hid{hermitian} or \hid{self-adjoint} if $x^\invo=x$.
-%20190429%    \item An element $x\in\algA$ is \hid{normal} if $xx^\invo=x^\invo x$.
-%20190429%    \item An element $x\in\algA$ is a \hid{projection} if 
-%20190429%          $xx=x$ (\prope{involutory}) and $x^\invo=x$ (\prope{hermitian}).
-%20190429%  \end{liste}
-%20190429%  }
-%20190429%\end{definition}
-
-
-%20190429%%---------------------------------------
-%20190429%\begin{theorem}
-%20190429%\footnote{
-%20190429%  \citerpg{michel1993}{429}{048667598X}
-%20190429%  }
-%20190429%\label{thm:nalg_hermitian}
-%20190429%\index{operator!adjoint}
-%20190429%\index{conjugate linear} \index{antilinear} \index{semilinear}
-%20190429%%---------------------------------------
-%20190429%Let $\opair{\algA}{\normn}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
-%20190429%\thmbox{
-%20190429%  \mcom{ x= x^\invo \text{ and }  y= y^\invo}{$ x$ and $ y$ are hermitian}
-%20190429%  \qquad\implies\qquad
-%20190429%  \left\{
-%20190429%    \begin{array}{lcl @{\qquad}D}
-%20190429%       x+ y   &=& ( x+ y  )^\invo & \text{($x+ y$ is self adjoint)} \\
-%20190429%      %\alpha  x &=& \bar{\alpha}  x^\invo & \text{($\alpha  x$ is self adjoint)} \\
-%20190429%       x^\invo   &=& ( x^\invo  )^\invo & \text{($x^\invo$ is self adjoint)} \\
-%20190429%      \mc{4}{l}{\ds \mcom{ x  y   = ( x  y  )^\invo}{$( x y)$ is hermitian} \iff \mcom{ x y= y x}{commutative}}
-%20190429%    \end{array}
-%20190429%  \right.
-%20190429%  }
-%20190429%\end{theorem}
-%20190429%\begin{proof}
-%20190429%\begin{align*}
-%20190429%  \brp{ x+ y}^\invo
-%20190429%    &=  x^\invo +  y^\invo
-%20190429%    && \text{by \prope{distributive} property of $\invo$}
-%20190429%    && \text{\xref{def:staralg}}
-%20190429%  \\&=  x +  y
-%20190429%    && \text{by left hypothesis}
-%20190429%  \\\\
-%20190429%  %\inprod{(\alpha x)\vx}{\vy}
-%20190429%  %  &= \inprod{\vx}{(\alpha x)^\invo\vy}
-%20190429%  %  && \text{by definition of adjoint \xref{def:op_adjoint}}
-%20190429%  %\\&= \inprod{\vx}{\bar{\alpha} x\vy}
-%20190429%  %  && \text{by \prefp{def:star_algebra}}
-%20190429%  %\\
-%20190429%  \brp{ x^\invo}^\invo
-%20190429%    &=  x
-%20190429%    && \text{by \prope{involutory} property of $\invo$}
-%20190429%    && \text{\xref{def:staralg}}
-%20190429%  \\\\
-%20190429%  \intertext{Proof that $ x y=( x y)^\invo \implies  x y= y x$}
-%20190429%   x y
-%20190429%    &= \brp{ x y}^\invo
-%20190429%    && \text{by left hypothesis}
-%20190429%  \\&=  y^\invo x^\invo
-%20190429%    && \text{by \prope{antiautomorphic} property of $\invo$}
-%20190429%    && \text{\xref{def:staralg}}
-%20190429%  \\&=  y x
-%20190429%    && \text{by left hypothesis}
-%20190429%  \\
-%20190429%  \intertext{Proof that $ x y=( x y)^\invo \impliedby  x y= y x$}
-%20190429%  \brp{ x y}^\invo
-%20190429%    &= \brp{ y x}^\invo
-%20190429%    && \text{by left hypothesis}
-%20190429%  \\&=  x^\invo y^\invo
-%20190429%    && \text{by \prope{antiautomorphic} property of $\invo$}
-%20190429%    && \text{\xref{def:staralg}}
-%20190429%  \\&=  x y
-%20190429%    && \text{by left hypothesis}
-%20190429%\end{align*}
-%20190429%\end{proof}
-
-
 %---------------------------------------
 \begin{definition}[Hermitian components]
 \label{def:nalg_Re}
 \label{def:nalg_Im}
 \label{def:Re}
 \label{def:Im}
-\footnote{
+%\footnote{
   \citerpg{michel1993}{430}{048667598X},
   \citerp{rickart1960}{179},
   \citeIpg{gelfand1964}{242}{0821820222}
-  }
+%  }
 %---------------------------------------
 Let $\opair{\setX}{\normn}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
 \defbox{
@@ -276,278 +66,8 @@ Let $\opair{\setX}{\normn}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
 \label{ex:staralg_C}
 %---------------------------------------
 Let $\C$ be the \structe{set of complex numbers} and $\invo:\C\to\C$ the \ope{conjugate operator}.
-%\exboxt{
-  The pair $\opair{\C}{\invo}$ is an \structe{$\invo$-algebra}. 
-%In particular,
-%  \\\indentx
-%  $\ds\begin{array}{rcl @{\qquad}C @{\qquad}D}
-%    x^{\invo\invo} &=& x                & \forall x\in\C    & (\prop{involutary})        \\
-%    (x+y)^\invo   &=& x^\invo + y^\invo  & \forall x,y\in\C  & (\prop{distributive})      \\
-%    (xy)^\invo    &=& y^\invo x^\invo    & \forall x,y\in\C  & (\prop{antiautomorphic})   \\
-%    %(xy)^\invo    &=& x^\invo y^\invo    & \forall x,y\in\C  & (\prop{conjugate linear}) \\
-%  \end{array}$
-%  }
+The pair $\opair{\C}{\invo}$ is an \structe{$\invo$-algebra}. 
 \end{example}
 
 
 
-%20190429%%---------------------------------------
-%20190429%\begin{theorem}
-%20190429%\footnote{
-%20190429%  \citerpg{michel1993}{430}{048667598X},
-%20190429%  \citerpg{halmos}{42}{0821813781}  
-%20190429%  }
-%20190429%\label{thm:nalg_re_sa}
-%20190429%%---------------------------------------
-%20190429%Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
-%20190429%\thmbox{\begin{array}{rcl @{\qquad}C @{\qquad}D}
-%20190429%  \Re x &=& \brp{\Re x}^\invo & \forall  x\in\algA & ($\Re x$ is \prope{hermitian})\\
-%20190429%  \Im x &=& \brp{\Im x}^\invo & \forall  x\in\algA & ($\Im x$ is \prope{hermitian})
-%20190429%\end{array}}
-%20190429%\end{theorem}
-%20190429%\begin{proof}
-%20190429%  \begin{align*}
-%20190429%    \brp{\Re x}^\invo
-%20190429%      &= \brp{\frac{1}{2  }\brp{ x+ x^\invo}}^\invo
-%20190429%      && \text{by definition of $\Re$}
-%20190429%      && \text{\xref{def:nalg_Re}}
-%20190429%    \\&= \frac{1}{2  }\brp{ x^\invo+ x^{\invo\invo}}
-%20190429%      && \text{by \prope{distributive} property of $\invo$}
-%20190429%      && \text{\xref{def:staralg}}
-%20190429%    \\&= \frac{1}{2  }\brp{ x^\invo+ x}
-%20190429%      && \text{by \prope{involutory} property of $\invo$}
-%20190429%      && \text{\xref{def:staralg}}
-%20190429%    \\&= \Re x
-%20190429%      && \text{by definition of $\Re$}
-%20190429%      && \text{\xref{def:nalg_Re}}
-%20190429%    \\
-%20190429%    \brp{\Im x}^\invo
-%20190429%      &= \brp{\frac{1}{2i}\brp{ x- x^\invo}}^\invo
-%20190429%      && \text{by definition of $\Im$}
-%20190429%      && \text{\xref{def:nalg_Im}}
-%20190429%    \\&= \frac{1}{2i }\brp{ x^\invo- x^{\invo\invo}}
-%20190429%      && \text{by \prope{distributive} property of $\invo$}
-%20190429%      && \text{\xref{def:staralg}}
-%20190429%    \\&= \frac{1}{2i }\brp{ x^\invo- x}
-%20190429%      && \text{by \prope{involutory} property of $\invo$}
-%20190429%      && \text{\xref{def:staralg}}
-%20190429%    \\&= \Im x
-%20190429%      && \text{by definition of $\Im$}
-%20190429%      && \text{\xref{def:nalg_Im}}
-%20190429%  \end{align*}
-%20190429%\end{proof}
-
-%20190429%%---------------------------------------
-%20190429%\begin{theorem}[\thmd{Hermitian representation}]
-%20190429%\label{thm:nalg_re_im}
-%20190429%\footnote{
-%20190429%  \citerpg{michel1993}{430}{048667598X},
-%20190429%  \citerp{rickart1960}{179},
-%20190429%  %\citeIpg{gelfand1964}{242}{0821820222} \\
-%20190429%  \citeIp{gelfand1943r}{7}
-%20190429%  }
-%20190429%\index{hermitian components}
-%20190429%%---------------------------------------
-%20190429%Let $\opair{\algA}{\invo}$ be a \structe{$\invo$-algebra} \xref{def:staralg}.
-%20190429%\thmbox{
-%20190429%   a =  x + i y
-%20190429%  \qquad\iff\qquad
-%20190429%   x=\Re a \quad\text{and}\quad  y=\Im a
-%20190429%  }
-%20190429%\end{theorem}
-%20190429%\begin{proof}
-%20190429%  \begin{liste}
-%20190429%    \item Proof that $ a =  x + i y \implies  x=\Re a \quad\text{and}\quad  y=\Im a$:
-%20190429%      \begin{align*}
-%20190429%                   &&  a  &=  x + i y                 && \text{by left hypothesis}
-%20190429%        \\\implies &&  a^\invo &= \brp{ x+i y}^\invo  
-%20190429%                   && \text{by definition of \fncte{adjoint}}
-%20190429%                   && \text{\xref{def:op_adjoint}}
-%20190429%        \\         &&       &=  x^\invo - i y^\invo   
-%20190429%                   && \text{by \prope{distributive} property of $\invo$}
-%20190429%                   && \text{\xref{def:star_algebra}}
-%20190429%        \\         &&       &=  x - i y           && \text{by \prefp{thm:nalg_re_sa}}
-%20190429%        \\\implies &&  x  &=  a  - i y          && \text{by solving for $ x$ in $ a = x+i y$ equation}
-%20190429%        \\         &&  x  &=  a^\invo + i y          && \text{by solving for $ x$ in $ a^\invo= x-i y$ equation}
-%20190429%        \\\implies &&  x+ x &=  a+ a^\invo         && \text{by adding previous 2 equations}
-%20190429%        \\\implies && 2 x &=  a+ a^\invo             && \text{by solving for $ x$ in previous equation}
-%20190429%        \\\implies &&  x  &= \frac{1}{2}\brp{ a+ a^\invo}
-%20190429%        \\         &&       &= \Re a                
-%20190429%                   && \text{by definition of $\Re$} 
-%20190429%                   && \text{\xref{def:nalg_Re}}
-%20190429%        \\         && 
-%20190429%        \\         && i y &=  a  -  x           && \text{by solving for $i y$ in $ a = x+i y$ equation}
-%20190429%        \\         && i y &= - a^\invo +  x          && \text{by solving for $i y$ in $ a = x+i y$ equation}
-%20190429%        \\\implies && i y+i y &=  a- a^\invo       && \text{by adding previous 2 equations}
-%20190429%        \\\implies &&  y  &= \frac{1}{2i}\brp{ a- a^\invo} && \text{by solving for $i y$ in previous equations}
-%20190429%        \\         &&       &= \Im a                
-%20190429%                   && \text{by definition of $\Im$}
-%20190429%                   && \text{\xref{def:nalg_Im}}
-%20190429%      \end{align*}
-%20190429%
-%20190429%    \item Proof that $ a =  x + i y \impliedby  x=\Re a \quad\text{and}\quad  y=\Im a$:
-%20190429%      \begin{align*}
-%20190429%         x + i y
-%20190429%          &= \Re a + i\,\Im a
-%20190429%          && \text{by right hypothesis}
-%20190429%        \\&= \mcom{\frac{1}{2}\brp{ a+ a^\invo}}{$\Re a$} + i\mcom{\frac{1}{2i}\brp{ a- a^\invo}}{$\Im a$}
-%20190429%          && \text{by definition of $\Re$ and $\Im$}
-%20190429%          && \text{\xref{def:nalg_Re}}
-%20190429%        \\&= \brp{\frac{1}{2} a+\frac{1}{2} a} + 
-%20190429%             \cancelto{0}{\brp{\frac{1}{2} a^\invo-\frac{1}{2} a^\invo}}
-%20190429%        \\&=  a
-%20190429%      \end{align*}
-%20190429%  \end{liste}
-%20190429%\end{proof}
-
-%20190429%%=======================================
-%20190429%%\section{Normed Algebras}
-%20190429%%=======================================
-%20190429%%---------------------------------------
-%20190429%\begin{definition}
-%20190429%\footnote{
-%20190429%  \citerp{rickart1960}{2},
-%20190429%  \citerpgc{berberian1961}{103}{0821819127}{Theorem IV.9.2}
-%20190429%  %\citerpg{folland1995}{1}{0849384907}
-%20190429%  }
-%20190429%\label{def:normed_algebra}
-%20190429%\label{def:nalg}
-%20190429%%---------------------------------------
-%20190429%Let $\algA$ be an algebra.
-%20190429%\defbox{\begin{array}{M}
-%20190429%  The pair $\opair{\algA}{\normn}$ is a \hid{normed algebra} if
-%20190429%  \\\qquad$\ds\norm{xy} \le \norm{x}\norm{y} 
-%20190429%    \qquad \forall x,y\in\algA 
-%20190429%    \qquad \text{\scriptsize(\hid{multiplicative condition})}
-%20190429%  $\\
-%20190429%  A normed algebra $\opair{\algA}{\normn}$ is a \hid{Banach algebra} if
-%20190429%  $\opair{\algA}{\normn}$ is also a Banach space.
-%20190429%\end{array}}
-%20190429%\end{definition}
-%20190429%
-%20190429%%---------------------------------------
-%20190429%\begin{proposition}
-%20190429%%---------------------------------------
-%20190429%\propbox{\text{
-%20190429%  $\opair{\algA}{\normn}$ is a normed algebra
-%20190429%  $\qquad\implies\qquad$
-%20190429%  multiplication is \hib{continuous} in $\opair{\algA}{\normn}$
-%20190429%  }}
-%20190429%\end{proposition}
-%20190429%\begin{proof}
-%20190429%  \begin{enumerate}
-%20190429%    \item Define $\ff(x)\eqd zx$. That is, the function $\ff$ represents multiplication of $x$ times some 
-%20190429%          arbitrary value $z$. \label{item:ffnorm}
-%20190429%
-%20190429%    \item Let $\delta\eqd \norm{x-y}$ and $\epsilon\eqd\norm{\ff(x)-\ff(y)}$. \label{item:deltanorm}
-%20190429%
-%20190429%    \item To prove that multiplication ($\ff$) is \hie{continuous} with respect to the metric generated by $\normn$,
-%20190429%          we have to show that we can always make $\epsilon$ arbitrarily small for some $\delta>0$.
-%20190429%
-%20190429%    \item And here is the proof that multiplication is indeed continuous in $\opair{\algA}{\normn}$: 
-%20190429%      \begin{align*}
-%20190429%        \norm{\ff(x)-\ff(y)}
-%20190429%          &\eqd\norm{zx-zy}
-%20190429%          &&   \text{by definition of $\ff$}
-%20190429%          &&   \text{\xref{item:ffnorm}}
-%20190429%        \\&=   \norm{z(x-y)}
-%20190429%        \\&\le \norm{z}\,\norm{x-y}
-%20190429%          &&   \text{by definition of \structe{normed algebra}}
-%20190429%          &&   \text{\xref{def:normed_algebra}}
-%20190429%        \\&\eqd\norm{z}\,\delta
-%20190429%          &&   \text{by definition of $\delta$}
-%20190429%          &&   \text{\xref{item:deltanorm}}
-%20190429%        \\&\le \epsilon
-%20190429%          &&   \text{for some value of $\delta>0$}
-%20190429%      \end{align*}
-%20190429%  \end{enumerate}
-%20190429%\end{proof}
-%20190429%
-%20190429%
-%20190429%%---------------------------------------
-%20190429%\begin{theorem}[Gelfand-Mazur Theorem]
-%20190429%\footnote{
-%20190429%  \citerpg{folland1995}{4}{0849384907},
-%20190429%  \citePc{mazur1938}{(statement)},
-%20190429%  \citePc{gelfand1941}{(proof)}
-%20190429%  }
-%20190429%\index{Gelfand-Mazur Theorem}
-%20190429%\index{theorems!Gelfand-Mazur}
-%20190429%%---------------------------------------
-%20190429%Let $\C$ be the field of complex numbers.
-%20190429%\thmbox{
-%20190429%  \brbr{\begin{array}{l}
-%20190429%    \text{$\opair{\algA}{\normn}$ is a Banach algebra} \\
-%20190429%    \text{every nonzero $x\in\algA$ is invertible}
-%20190429%  \end{array}}
-%20190429%  \qquad\implies\qquad
-%20190429%  \algA \isomorphic \C
-%20190429%  \quad\text{($\algA$ is isomorphic to $\C$)}
-%20190429%}
-%20190429%\end{theorem}
-%20190429%
-%20190429%
-%20190429%%=======================================
-%20190429%%\section{C* Algebras}
-%20190429%%=======================================
-%20190429%
-%20190429%%---------------------------------------
-%20190429%\begin{definition}
-%20190429%\footnote{
-%20190429%  \citerpg{folland1995}{1}{0849384907},
-%20190429%  \citeIpg{gelfand1964}{241}{0821820222},
-%20190429%  \citeP{gelfand1943},
-%20190429%  \citeI{gelfand1943r} 
-%20190429%  }
-%20190429%%\label{def:cstar_algebra}
-%20190429%\label{def:cstar}
-%20190429%\index{algebras!$C^\invo$-algebra} 
-%20190429%%---------------------------------------
-%20190429%\defboxt{
-%20190429%  The triple $\hxs{\otriple{\algA}{\normn}{\invo}}$ is a \structd{$C^\invo$ algebra} if
-%20190429%  \\\indentx$\begin{array}{FLlD}
-%20190429%      1. & \opair{\algA}{\normn}       & \text{is a Banach algebra}  & and  
-%20190429%    \\2. & \opair{\algA}{\invo}        & \text{is a $\invo$-algebra} & and  
-%20190429%    \\3. & \norm{x^\invo x}=\norm{x}^2 & \forall x\in\algA           &.
-%20190429%  \end{array}$\\
-%20190429%  A \structd{$C^\invo$ algebra} $\otriple{\algA}{\normn}{\invo}$ is also called a \structd{C star algebra}.
-%20190429%  }
-%20190429%\end{definition}
-%20190429%
-%20190429%
-%20190429%%---------------------------------------
-%20190429%\begin{theorem}
-%20190429%\footnote{
-%20190429%  \citerpg{folland1995}{1}{0849384907},
-%20190429%  \citeIp{gelfand1943r}{4},
-%20190429%  \citeP{gelfand1943}
-%20190429%  }
-%20190429%%---------------------------------------
-%20190429%Let $\algA$ be an algebra.
-%20190429%\thmbox{
-%20190429%  \text{$\otriple{\algA}{\normn}{\invo}$ is a \hid{$C^\invo$ algebra}}
-%20190429%  \qquad\implies\qquad
-%20190429%  \norm{x^\invo}=\norm{x}
-%20190429%  }
-%20190429%\end{theorem}
-%20190429%\begin{proof}
-%20190429%\begin{align*}
-%20190429%  \norm{x}
-%20190429%    &= \frac{1}{\norm{x}}\;\norm{x}^2
-%20190429%  \\&= \frac{1}{\norm{x}}\;\norm{x^\invo x}
-%20190429%    && \text{by definition of \structe{$C^\invo$-algebra}} 
-%20190429%    && \text{\xref{def:cstar}}
-%20190429%  \\&\le \frac{1}{\norm{x}}\;\norm{x^\invo}\norm{x}
-%20190429%    && \text{by definition of \structe{normed algebra}}
-%20190429%    && \text{\xref{def:normed_algebra}}
-%20190429%  \\&= \norm{x^\invo}
-%20190429%  \\
-%20190429%  \norm{x^\invo}
-%20190429%    &\le \norm{x^{\invo\invo}}
-%20190429%    && \text{by previous result}
-%20190429%  \\&= \norm{x}
-%20190429%    && \text{by \prope{involution} property of $\invo$}
-%20190429%    && \text{\xref{def:star_algebra}}
-%20190429%\end{align*}
-%20190429%\end{proof}
-%20190429%
