--- a/2019xcordef/JACM/packages.sty
+++ b/2019xcordef/JACM/packages.sty
@@ -19,5 +19,5 @@
 \usepackage{geometry}
 \usepackage{prettyref}
 \usepackage[title]{appendix}
-\usepackage{natbib}                   % Bibliographic styles including Hardvard style
+\usepackage[numbers,square,comma]{natbib}                   % Bibliographic styles including Hardvard style
 
