--- a/2019xcordef/JACM/randseq.tex
+++ b/2019xcordef/JACM/randseq.tex
@@ -7,11 +7,11 @@
 %======================================
 %---------------------------------------
 \begin{definition}
-\footnote{
+%\footnote{
   \citerpgc{papoulis1984}{220}{0070484686}{``Wide sense"},
   \citerppgc{bendat2010}{109}{111}{1118210824}{``{\scshape Chapter 5} Stationary Random Processes"\ldots``\prope{weakly stationary}"},
   \citerpgc{bendat1980}{3}{0471058874}{``1.1.1 Stationary Data"}
-  }
+%  }
 \label{def:wss}
 %---------------------------------------
 Let $\seqnZ{\rvx(n)}$ be a \fncte{random sequence}.
@@ -27,9 +27,9 @@ Let $\seqnZ{\rvx(n)}$ be a \fncte{random sequence}.
 
 %---------------------------------------
 \begin{definition}
-\footnote{
+%\footnote{
   \citerpgc{papoulis1984}{221}{0070484686}{``jointly WSS"}
-  }
+%  }
 \label{def:jwss}
 %---------------------------------------
 Let $\seqnZ{\rvx(n)}$ and $\seqnZ{\rvy(n)}$ be \fncte{random sequence}s.
